--- a/blogs-archive/blog2.html
+++ b/blogs-archive/blog2.html
@@ -55,7 +55,8 @@
             <!--DESKTOP-->
 
             <!--Whatsapp button-->
-            <a target="_blank" href="https://wa.me/+917066695395?text=I%20am%20interested%20"><img
+            <a target="_blank" href="https://wa.me/+919819590889?text=I%20am%20interested%20
+"><img
                     src="../assets/whatsapp_icon.png" class="hover-up" alt="whatsapp"
                     style="position: fixed; bottom: 8%; right: 3%; z-index: 1; color: #8854C8; height: 70px; width: 70px;">
             </a>
@@ -117,7 +118,7 @@
                             </ul>
                             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                                 <li class="nav-item" style="margin-right: 15px; font-size: 20px;">
-                                    <a class="nav-link active hover-up" aria-current="page" href="../home.html"
+                                    <a class="nav-link active hover-up" aria-current="page" href="../index.html"
                                         style="font-size: 18px; font-weight: 300;">Home</a>
                                 </li>
                                 <li class="nav-item hover-up"
@@ -272,11 +273,11 @@
 
                             </div>
                             <div class="col-8">
-                                <a href="http://www.csirait.com"><img src="../assets/csi-logo.png" class="img-fluid"
+                                <a href="http://www.csirait.in"><img src="../assets/csi-logo.png" class="img-fluid"
                                         style="height: 200px; width: 200px;"></a>
                             </div>
                             <div class="col-2">
-                                <div style="height: 250px; border-left: 2px solid #8854C8;">
+                                <div style="height: 300px; border-left: 2px solid #8854C8;">
 
                                 </div>
                             </div>
@@ -308,7 +309,7 @@
 
                         <div class="row">
                             <div class="col-2">
-                                <div style="height: 250px; border-left: 2px solid #8854C8; margin-left: 2.67558vw;">
+                                <div style="height: 300px; border-left: 2px solid #8854C8; margin-left: 2.67558vw;">
 
                                 </div>
                             </div>
@@ -319,6 +320,9 @@
 
                                 <h2 style="color: #8854C8;"><i class="fas fa-share-alt"></i> &nbspSocial Media</h2>
                                 <br>
+                                <a style="text-decoration: none; font-size: 20px;" href="https://csirait.in"
+                                    target="_blank" class="socialmedia hover-up"><i class="fas fa-globe"></i>
+                                    &nbspWebsite</a><br><br>
                                 <a style="text-decoration: none; font-size: 20px;" href="https://github.com/csi-rait"
                                     target="_blank" class="socialmedia hover-up"><i class="fab fa-github"></i>
                                     &nbspGithub</a><br><br>
@@ -334,7 +338,7 @@
                                     href="https://www.facebook.com/csirait.official/" target="_blank"
                                     class="socialmedia"><i class="fab fa-facebook"></i> &nbspFacebook</a><br><br>
                                 <a style="text-decoration: none; font-size: 20px;"
-                                    href="https://www.facebook.com/csirait.official/" target="_blank"
+                                    href="https://discord.gg/qERpWd5z8j" target="_blank"
                                     class="socialmedia"><i class="fab fa-discord"></i> &nbspDiscord</a><br><br>
                             </div>
 
@@ -406,7 +410,8 @@
         <template class="ad__mobile" style="overflow: hidden;">
 
             <!--Whatsapp button-->
-            <a target="_blank" href="https://wa.me/+917066695395?text=I%20am%20interested%20"><img
+            <a target="_blank" href="https://wa.me/+919819590889?text=I%20am%20interested%20
+"><img
                     src="../assets/whatsapp_icon.png" class="hover-up" alt="whatsapp"
                     style="position: fixed; bottom: 5%; right: 3%; z-index: 1; color: #8854C8; height: 50px; width: 50px;">
             </a>
@@ -442,7 +447,7 @@
 
                 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="margin: 0px;">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="home.html">
+                        <a class="navbar-brand" href="index.html">
                             <img src="../assets/decrypt-logo-5.png" alt="CSI"
                                 style="height: 38.666px; width: 131.866px; margin: 8px;"
                                 class="d-inline-block align-text-top logox">
@@ -468,7 +473,7 @@
                             <ul class="navbar-nav ml-auto mb-2 mb-lg-0"
                                 style="background-color: #212529; padding: 10px; border-radius: 4vw;">
                                 <li class="nav-item" style="margin-right: 40px; font-size: 20px;">
-                                    <a class="nav-link active hover-up" aria-current="page" href="../home.html"
+                                    <a class="nav-link active hover-up" aria-current="page" href="../index.html"
                                         style="font-size: 20px;">Home</a>
                                 </li>
                                 <li class="nav-item hover-up " style="margin-right: 40px; font-size: 20px;">
@@ -626,7 +631,7 @@
 
                             </div>
                             <div class="col-9">
-                                <a href="http://www.csirait.com"><img src="../assets/csi-logo.png" class="img-fluid"
+                                <a href="http://www.csirait.in"><img src="../assets/csi-logo.png" class="img-fluid"
                                         style="height: 100px; width: 100px"></a>
 
                             </div>
@@ -639,7 +644,7 @@
                         </div>
                     </div>
                     <div class="col-2">
-                        <div style="height: 180px; border-left: 2px solid #8854C8; margin-left: 25px;">
+                        <div style="height: 200px; border-left: 2px solid #8854C8; margin-left: 25px;">
 
                         </div>
                     </div>
@@ -650,6 +655,9 @@
 
                             <h2 style="color: #8854C8;"><i class="fas fa-share-alt"></i> &nbspSocial Media</h2>
                             <br>
+                            <a style="text-decoration: none; font-size: 20px;" href="https://csirait.in"
+                                target="_blank" class="socialmedia hover-up"><i class="fas fa-globe"></i>
+                                &nbspWebsite</a><br><br>
                             <a style="text-decoration: none; font-size: 20px;" href="https://github.com/csi-rait"
                                 target="_blank" class="socialmedia hover-up"><i class="fab fa-github"></i>
                                 &nbspGithub</a><br><br>
@@ -665,7 +673,7 @@
                                 href="https://www.facebook.com/csirait.official/" target="_blank" class="socialmedia"><i
                                     class="fab fa-facebook"></i> &nbspFacebook</a><br><br>
                             <a style="text-decoration: none; font-size: 20px;"
-                                href="https://www.facebook.com/csirait.official/" target="_blank" class="socialmedia"><i
+                                href="https://discord.gg/qERpWd5z8j" target="_blank" class="socialmedia"><i
                                     class="fab fa-discord"></i> &nbspDiscord</a><br><br>
 
 
