--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                 class="card-img-top" alt="Data Science">
                             <div class="card-body">
                                 <br>
-                                <h5 class="card-title" style="font-size: 20px; color: #8854C8; font-weight: 700;">7
+                                <h5 class="card-title" style="font-size: 20px; color: #8854C8; font-weight: 700;">
                                     That New Final
                                         Fantasy Origins Trailer Is Actually Pretty Cooly</h5>
                                 <hr style="background-color:#8854C8; height: 0.1px; width: 70%; opacity: 100%;">
